[package]
name = "todoz"
version = "1.0.0"
edition = "2024"
authors = ["zape"]
description = "A simple CLI to-do list manager"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sangeeth-606/todoZ"
keywords = ["todo", "cli", "task-manager"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
dirs = "5.0" 

[[bin]]
name = "todoz"
path = "src/main.rs"


